TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-05-19 MickeM
 * Fixed issue with checking rate counters (such as disk idle %)
 * Fixed (I think) the negative denominator counter issue
 * Fixed so indexes are only converted on \\123\\ and not also \\123 hello world\\ which caused some issues with numeric counter variables.

2012-05-13 MickeM
 * Take 2 on fixing the empty command parsing.

2012-05-07 MickeM
 * Fixed parsin of empty sections (CheckExternalScripts) - #524
 * Fixed so duplicate command are not created when both sections and shorthands are used (CheckExternalScripts)
 * Added a test to see if I can resolve the negative denominator issue.

2012-05-03 MickeM
 * Fixed issue with parsing size-type (usch as MinCritFree=10G)

2012-05-01 MickeM
 * Release 0.4.0

2012-04-26 MickeM
 * Fixed issue with check-cpu sampling interval being 10seconds and not 1/10 second.

2012-04-23 MickeM
 * Fixed issue with missing performance data via NSCA
 * Fixed issue with hostnames beeing lowercase

2012-04-12 MickeM
 * Fixed so keys with parents are advanced (in favour of the parent)
 * Fixed so NSClientServer uses the correct default path for its parents (ie. /settings/default)

2012-04-10 MickeM
 * Fixed crash in new logger
 * Fixed a few command line parsing issues (most notably test and --log-to-file)
 * Changed default location for process dumps to be a non-elevated location (under common-appdata).
 * Fixed (ish) check_nt issue (check_nt really really is broken... this will probably cause problems with people sending large payloads though)
 
2012-04-06 MickeM
 * Easter break!

2012-04-04 MickeM
 * Fixed issue with empty filters in active eventlog

2012-04-04 MickeM
 * Resolved some issues with loggingin default set to debug.
 * Fixed so --debug actually works
 * Added --log-to-file and set "nscp test" to not log to file.