@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,174
-#define STRPRODUCTVER  "0,4,0,174"
-#define STRPRODUCTDATE "2012-05-19"
+#define PRODUCTVER     0,4,0,175
+#define STRPRODUCTVER  "0,4,0,175"
+#define STRPRODUCTDATE "2012-06-12"
 #endif // VERSION_HPP
